syntax = "proto3";

package def.matching_room;

option java_package = "org.commelina.example.game.matching_room.proto";
option java_outer_classname = "MethodDef";
option java_multiple_files = true;

enum MATCHING_ROOM_METHODS {
    CREATE_ROOM = 0;
}